{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 5,
  "lineage": "a73eac6d-9561-7025-b8f5-6b91462e36eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-oracle",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540728557638:security-group/sg-0fcf94fa31a38be46",
            "description": "allow-oracle",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0fcf94fa31a38be46",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f216848a2179b5f"
                ],
                "self": false,
                "to_port": 1521
              }
            ],
            "name": "allow-oracle",
            "name_prefix": "",
            "owner_id": "540728557638",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-oracle"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da3fad2a3696a88d"
          },
          "dependencies": [
            "aws_security_group.example-instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540728557638:security-group/sg-03f216848a2179b5f",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f216848a2179b5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "540728557638",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da3fad2a3696a88d"
          }
        }
      ]
    }
  ]
}